# src/main/java/org/app/finanz/persistence/entity/RefreshTokenEntity.java
@@ -1,0 +1,39 @@
+package org.app.finanz.persistence.entity;
+
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.FetchType;
+import jakarta.persistence.JoinColumn;
+import jakarta.persistence.ManyToOne;
+import jakarta.persistence.Table;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+import org.hibernate.annotations.CreationTimestamp;
+
+import java.time.Instant;
+import java.util.UUID;
+
+@Table(name = "REFRESH_TOKENS")
+@Entity
+@Getter
+@Setter
+@NoArgsConstructor
+public class RefreshTokenEntity extends BaseEntity {
+  @Column(nullable = false, unique = true)
+  private UUID token;
+
+  @ManyToOne(fetch = FetchType.LAZY)
+  @JoinColumn(name = "USER_ID", nullable = false)
+  private UserEntity user;
+
+  @Column(name = "EXPIRES_AT", nullable = false)
+  private Instant expiresAt;
+
+  @Column(nullable = false)
+  private boolean revoked;
+
+  @CreationTimestamp
+  @Column(name = "CREATED_AT", nullable = false)
+  private Instant createdAt;
+}
